tests/phppt/errors/macro_empty_expansion.phppt
--TEST--
Malformed macro, empty expansion
--FILE--
<?php

macro {
    x
} >> {
    
}

?>
--EXPECTF--
Empty macro expansion on line 3.
